--- a/src/MinMe.Core/MinMe.Core.csproj
+++ b/src/MinMe.Core/MinMe.Core.csproj
@@ -5,5 +5,7 @@
     <LangVersion>8</LangVersion>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-  <Import Project="..\..\.paket\Paket.Restore.targets" />
+  <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXml" Version="2.10.0" />
+  </ItemGroup>
 </Project>
