--- a/src/MinMe.Blazor/MinMe.Blazor.csproj
+++ b/src/MinMe.Blazor/MinMe.Blazor.csproj
@@ -1,17 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <LangVersion>8</LangVersion>
+    <Nullable>enable</Nullable>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXml" Version="2.10.0" />
     <PackageReference Include="ElectronNET.API" Version="7.30.2" />
     <PackageReference Include="Blazored.Toast" Version="2.0.8" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Services\" />
+    <PackageReference Include="Clippit" Version="1.1.4" />
+    <PackageReference Include="System.IO.Packaging" Version="4.7.0" />
+    <PackageReference Include="ReactiveUI.Blazor" Version="11.1.20" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="electron.manifest.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
   </ItemGroup>
 </Project>
