--- a/src/MinMe.Blazor/MinMe.Blazor.csproj
+++ b/src/MinMe.Blazor/MinMe.Blazor.csproj
@@ -7,6 +7,7 @@
     <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Blazor.Fluxor" Version="1.3.2-dotnet3.1.0-preview4.19579.2" />
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.10.0" />
     <PackageReference Include="ElectronNET.API" Version="7.30.2" />
     <PackageReference Include="Blazored.Toast" Version="2.0.8" />
@@ -23,6 +24,8 @@
     <Folder Include="ViewModels\" />
     <Folder Include="Views\" />
     <Folder Include="wwwroot\images\" />
+    <Folder Include="Store\" />
+    <Folder Include="Store\Counter\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MinMe.Core\MinMe.Core.csproj">
