--- a/src/MinMe.Blazor/MinMe.Blazor.csproj
+++ b/src/MinMe.Blazor/MinMe.Blazor.csproj
@@ -13,7 +13,6 @@
     <PackageReference Include="Blazored.Toast" Version="2.0.8" />
     <PackageReference Include="Clippit" Version="1.1.4" />
     <PackageReference Include="System.IO.Packaging" Version="4.7.0" />
-    <PackageReference Include="ReactiveUI.Blazor" Version="11.1.20" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="electron.manifest.json">
@@ -21,11 +20,11 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="ViewModels\" />
-    <Folder Include="Views\" />
+    <Folder Include="Components\" />
     <Folder Include="wwwroot\images\" />
     <Folder Include="Store\" />
     <Folder Include="Store\Counter\" />
+    <Folder Include="Store\Document\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MinMe.Core\MinMe.Core.csproj">
