--- a/src/MinMe.Blazor/MinMe.Blazor.csproj
+++ b/src/MinMe.Blazor/MinMe.Blazor.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="Blazored.Toast" Version="2.0.8" />
     <PackageReference Include="Clippit" Version="1.1.4" />
     <PackageReference Include="System.IO.Packaging" Version="4.7.0" />
+    <PackageReference Include="GridBlazor" Version="1.3.14" />
+    <PackageReference Include="GridMvcCore" Version="2.11.12" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="electron.manifest.json">
