--- a/src/MinMe.Blazor/MinMe.Blazor.csproj
+++ b/src/MinMe.Blazor/MinMe.Blazor.csproj
@@ -1,18 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <OutputType>WinExe</OutputType>
     <LangVersion>8</LangVersion>
     <Nullable>enable</Nullable>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Blazor.Fluxor" Version="1.3.2-dotnet3.1.0-preview4.19579.2" />
-    <PackageReference Include="DocumentFormat.OpenXml" Version="2.10.0" />
-    <PackageReference Include="ElectronNET.API" Version="7.30.2" />
-    <PackageReference Include="Blazored.Toast" Version="2.0.8" />
+    <PackageReference Include="BlazorInputFile" Version="0.1.0-preview-00002" />
     <PackageReference Include="Clippit" Version="1.1.4" />
+    <PackageReference Include="DocumentFormat.OpenXml" Version="2.10.0" />
     <PackageReference Include="System.IO.Packaging" Version="4.7.0" />
+    <PackageReference Include="WebWindow" Version="0.1.0-20191120.6" />
+    <PackageReference Include="Blazor.Fluxor" Version="1.3.2-dotnet3.1.0-preview4.19579.2" />
+    <PackageReference Include="Blazored.Toast" Version="2.0.8" />
     <PackageReference Include="GridBlazor" Version="1.3.14" />
     <PackageReference Include="GridMvcCore" Version="2.11.12" />
   </ItemGroup>
@@ -23,9 +25,13 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Components\" />
-    <Folder Include="wwwroot\images\" />
     <Folder Include="Store\" />
     <Folder Include="Store\Document\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Update="wwwroot\**">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MinMe.Core\MinMe.Core.csproj">
