--- a/src/MinMe.Blazor/Properties/launchSettings.json
+++ b/src/MinMe.Blazor/Properties/launchSettings.json
@@ -27,7 +27,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:5000"
+      "applicationUrl": "https://localhost:38383"
     }
   }
 }
