Initial version of image size optimization

--- a/src/MinMe/MinMe.csproj
+++ b/src/MinMe/MinMe.csproj
@@ -7,5 +7,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.10.0" />
+    <PackageReference Include="System.IO.Compression" Version="4.3.0" />
+    <PackageReference Include="System.Drawing.Common" Version="4.5.0" />
+    <PackageReference Include="NLog" Version="4.6.8" />
   </ItemGroup>
 </Project>
