--- a/src/MinMe.Avalonia/Assets/Info.plist
+++ b/src/MinMe.Avalonia/Assets/Info.plist
@@ -2,26 +2,34 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+  <key>CFBundleName</key>
+  <string>MinMe.Avalonia</string>
   <key>CFBundleGetInfoString</key>
   <string>MinMe.Avalonia</string>
   <key>CFBundleExecutable</key>
   <string>MinMe.Avalonia</string>
-  <key>CFBundleIdentifier</key>
-  <string>com.your-company-name.www</string>
-  <key>CFBundleName</key>
-  <string>MinMe.Avalonia</string>
   <key>CFBundleIconFile</key>
   <string>AppIcon.icns</string>
+  <key>CFBundleIdentifier</key>
+  <string>com.sergeytihon.MinMe</string>
   <key>CFBundleShortVersionString</key>
-  <string>0.01</string>
+  <string>1.0</string>
+  <key>CFBundleVersion</key>
+  <string>1</string>
+  <key>LSMinimumSystemVersion</key>
+  <string>10.14</string>
+  <key>CFBundleDevelopmentRegion</key>
+  <string>en</string>
   <key>CFBundleInfoDictionaryVersion</key>
   <string>6.0</string>
   <key>CFBundlePackageType</key>
   <string>APPL</string>
+  <key>NSHumanReadableCopyright</key>
+  <string></string>
   <key>IFMajorVersion</key>
-  <integer>0</integer>
-  <key>IFMinorVersion</key>
   <integer>1</integer>
+  <key>IFMinorVersion</key>
+  <integer>0</integer>
   <key>NSHighResolutionCapable</key>
   <string>true</string>
 </dict>
