--- a/src/MinMe.Avalonia/MinMe.Avalonia.csproj
+++ b/src/MinMe.Avalonia/MinMe.Avalonia.csproj
@@ -1,11 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <LangVersion>8</LangVersion>
     <Nullable>enable</Nullable>
     <ApplicationIcon>Assets/minme-logo.ico</ApplicationIcon>
-
     <!-- <PublishTrimmed>true</PublishTrimmed>
     <PublishReadyToRun>true</PublishReadyToRun>
     <PublishSingleFile>true</PublishSingleFile> -->
@@ -20,18 +20,10 @@
     <AvaloniaResource Include="Assets\**" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Avalonia.Controls.DataGrid" Version="0.9.4" />
-    <PackageReference Include="DocumentFormat.OpenXml" Version="2.10.1" />
-    <PackageReference Include="Clippit" Version="1.2.0" />
-    <PackageReference Include="Avalonia" Version="0.9.4" />
-    <PackageReference Include="Avalonia.Desktop" Version="0.9.4" />
-    <PackageReference Include="Avalonia.ReactiveUI" Version="0.9.4" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.2" />
-  </ItemGroup>
-  <ItemGroup>
     <None Remove="paket.references" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MinMe\MinMe.csproj" />
   </ItemGroup>
+  <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
