--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -22,6 +22,9 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: ${{ matrix.dotnet }}
+    - name: Install libgdiplus on macOS
+      if: matrix.os == 'macOS-latest'
+      run: brew install mono-libgdiplus
 
     - name: Build Windows
       if: matrix.os == 'windows-latest'
