Magick.NET strategy and dependency update

--- a/src/MinMe/paket.template
+++ b/src/MinMe/paket.template
@@ -26,3 +26,5 @@ dependencies
         System.IO.Compression >= LOCKEDVERSION
         Microsoft.IO.RecyclableMemoryStream >= LOCKEDVERSION
         System.Drawing.Common >= LOCKEDVERSION
+        SixLabors.ImageSharp >= LOCKEDVERSION
+        Magick.NET-Q8-AnyCPU >= LOCKEDVERSION
