SixLabors.ImageSharp as a default strategy

--- a/tests/MinMe.Tests/MinMe.Tests.csproj
+++ b/tests/MinMe.Tests/MinMe.Tests.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <OutputType>Library</OutputType>
+    <LangVersion>8</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\MinMe\MinMe.csproj" />
