--- a/src/MinMe.Avalonia/MinMe.Avalonia.csproj
+++ b/src/MinMe.Avalonia/MinMe.Avalonia.csproj
@@ -3,8 +3,9 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <LangVersion>8</LangVersion>
+    <LangVersion>9</LangVersion>
     <Nullable>enable</Nullable>
+    <AnalysisLevel>5</AnalysisLevel>
     <ApplicationIcon>Assets/minme-logo.ico</ApplicationIcon>
     <PublishTrimmed>true</PublishTrimmed>
     <!-- <PublishReadyToRun>true</PublishReadyToRun>
