--- a/src/MinMe.WebAssembly/MinMe.WebAssembly.csproj
+++ b/src/MinMe.WebAssembly/MinMe.WebAssembly.csproj
@@ -6,5 +6,8 @@
     <Nullable>enable</Nullable>
     <AnalysisLevel>5</AnalysisLevel>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MinMe\MinMe.csproj" />
+  </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
