fix: migrate to latest blazorwasm template

--- a/src/MinMe.WebAssembly/MinMe.WebAssembly.csproj
+++ b/src/MinMe.WebAssembly/MinMe.WebAssembly.csproj
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <LangVersion>9</LangVersion>
+    <TargetFramework>net6.0</TargetFramework>
+    <LangVersion>10</LangVersion>
     <Nullable>enable</Nullable>
-    <AnalysisLevel>5</AnalysisLevel>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <RunAOTCompilation>true</RunAOTCompilation>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\MinMe\MinMe.csproj" />
