--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,8 @@ jobs:
 
     - name: Publish Blazor WASM
       run: dotnet publish -c Release src/MinMe.WebAssembly/MinMe.WebAssembly.csproj 
+    - name: Change base-tag in index.html from
+      run: sed -i 's/<base href="\/" \/>/<base href="\/MinMe\/" \/>/g' src/MinMe.WebAssembly/bin/Release/net6.0/publish/wwwroot/index.html
     - name: Publish
       uses: peaceiris/actions-gh-pages@v3
       with:
