--- a/src/MinMe.WebAssembly/MinMe.WebAssembly.csproj
+++ b/src/MinMe.WebAssembly/MinMe.WebAssembly.csproj
@@ -5,6 +5,8 @@
     <LangVersion>10</LangVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <RunAOTCompilation>false</RunAOTCompilation>
+    <BlazorCacheBootResources>false</BlazorCacheBootResources>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <ItemGroup>
