--- a/src/MinMe.WebAssembly/MinMe.WebAssembly.csproj
+++ b/src/MinMe.WebAssembly/MinMe.WebAssembly.csproj
@@ -5,7 +5,7 @@
     <LangVersion>10</LangVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RunAOTCompilation>false</RunAOTCompilation>
+    <RunAOTCompilation>true</RunAOTCompilation>
     <BlazorCacheBootResources>false</BlazorCacheBootResources>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
