--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,12 +22,5 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: ${{ matrix.dotnet }}
-    - name: Install wasm-tools
-      run: dotnet workload install wasm-tools
-
-    - name: Restore Tools
-      run: dotnet tool restore    
-    - name: Restore Dependencies
-      run: dotnet paket restore
     - name: Build and Test
-      run: dotnet fake run build.fsx
+      run: dotnet fsi build.fsx -- -p build
