--- a/src/MinMe.Avalonia/MinMe.Avalonia.csproj
+++ b/src/MinMe.Avalonia/MinMe.Avalonia.csproj
@@ -41,12 +41,14 @@
     <ProjectReference Include="..\MinMe\MinMe.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="11.0.6" />
+    <PackageReference Include="Avalonia" Version="11.0.6"/>
+    <PackageReference Include="Avalonia.Desktop" Version="11.0.6"/>
+    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.6"/>
+    <PackageReference Include="Avalonia.Fonts.Inter" Version="11.0.6"/>
+    <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
+    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.6"/>
+    <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.6"/>
     <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.0.6" />
-    <PackageReference Include="Avalonia.Desktop" Version="11.0.6" />
-    <PackageReference Include="Avalonia.Diagnostics" Version="11.0.6" />
-    <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.6" />
-    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.6" />
     <PackageReference Include="Clippit" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
   </ItemGroup>
